--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ mapper.bean.suffix=Mapper
 path.base=D:/code/Java-projects/javaCodeGenerator/part-springboot/src/main/
 # 包名
  # 父级包名
-package.base=com.lhd
+package.base=com.lhd.partspringboot
  # po所在包
 package.po=entity.po
  # enum所在包
