--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ ignore.table.prefix=false
 query.bean.suffix=Query
 # Mapper类的后缀 例如StudentMapper
 mapper.bean.suffix=Mapper
+# Service类的后缀
+service.bean.suffix=Service
+# ServiceImpl的后缀
+serviceImpl.bean.suffix=ServiceImpl
 # 文件输出路径
 path.base=D:/code/Java-projects/javaCodeGenerator/part-springboot/src/main/
 # 包名
@@ -29,6 +33,10 @@ package.exception=exception
 package.utils=utils
  # mappers所在包
 package.mappers=mappers
+ # service接口所在包
+package.service=service
+ # serviceImpl所在包
+package.service.impl=service.impl
 # 作者名
 author=liuhd
 # 实体类中日期类型参数格式 用于json的序列化与反序列化
