--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ mapper.bean.suffix=Mapper
 service.bean.suffix=Service
 # ServiceImpl的后缀
 serviceImpl.bean.suffix=ServiceImpl
+# Controller的后缀
+controller.bean.suffix=Controller
 # 文件输出路径
 path.base=D:/code/Java-projects/javaCodeGenerator/part-springboot/src/main/
 # 包名
